--- a/utils/nginx/locations-available/ombi.atomic.conf
+++ b/utils/nginx/locations-available/ombi.atomic.conf
@@ -1,10 +1,5 @@
-# Version=2.0
-
-# Ombi v3
+# Version=2.1
 location /ombi/ {
-  proxy_pass http://127.0.0.1:5000;
+  proxy_pass http://127.0.0.1:5000; # Ombi V3
   proxy_set_header X-Forwarded-Ssl on; # This needs to be here for Ombi to work, even though it's in proxy.conf
-}
-if ($http_referer ~* /ombi/) {
-  rewrite ^/dist/([0-9\d*]).js /ombi/dist/$1.js last;
 }
