--- a/utils/nginx/locations-available/organizr.atomic.conf
+++ b/utils/nginx/locations-available/organizr.atomic.conf
@@ -1,4 +1,7 @@
-# Version=1.0
+# Version=1.1
 location /organizr/ {
+  root /var/www;
+  index index.html index.php;
   try_files $uri $uri/ /index.php?$args;
+  include /etc/nginx/snippets/php.atomic.conf;
 }
