--- a/utils/nginx/locations-available/plex.atomic.conf
+++ b/utils/nginx/locations-available/plex.atomic.conf
@@ -1,8 +1,8 @@
-# Version=1.0
+# Version=1.1
 location /plex/ {
   rewrite /plex(/.*) $1 break;
   proxy_pass http://127.0.0.1:32400;
 }
-location /web/ {
-  proxy_pass http://127.0.0.1:32400;
+if ($http_referer ~* /plex/) {
+  rewrite ^/web/(.*) /plex/web/$1? redirect;
 }
