--- a/utils/nginx/locations-available/rutorrent.atomic.conf
+++ b/utils/nginx/locations-available/rutorrent.atomic.conf
@@ -1,5 +1,7 @@
-# Version=1.0
+# Version=1.1
 location /rutorrent/ {
+  root /var/www;
+  index index.html;
   try_files $uri $uri/ /index.html?$args;
 }
 location /RPC2 {
